packages/nom-reprap-response/src/tests/snapshots/nom_reprap_response__tests__ultimaker2_marlin_dbg_2019_firmware.snap
---
source: src/tests/mod.rs
expression: responses?
---
{
    "errors": {
        "unknown_command": [
            Echo(
                "Unknown command: \"N3 m23 file.txt*65\"",
            ),
            Ok(
                None,
            ),
        ],
    },
    "firmware": {
        "m115_firmware_info": [
            Echo(
                "FIRMWARE_NAME:Marlin Ultimaker2; Sprinter/grbl mashup for gen6 FIRMWARE_URL:http://github.com/Ultimaker PROTOCOL_VERSION:1.0 MACHINE_TYPE:Ultimaker EXTRUDER_COUNT:1",
            ),
            Ok(
                None,
            ),
        ],
    },
    "greeting": {
        "greeting_with_sd_card": [
            Greeting,
            Echo(
                "Marlin 1.0.0",
            ),
            Echo(
                "Last Updated: Nov 17 2017 23:41:38 | Author: Version DEV",
            ),
            Debug(
                "Compiled: Nov 17 2017",
            ),
            Echo(
                "Free Memory: 2052  PlannerBufferBytes: 1232",
            ),
            Echo(
                "Stored settings retrieved",
            ),
            Echo(
                "Steps per unit:",
            ),
            Echo(
                "M92 X80.00 Y80.00 Z200.00 E311.00",
            ),
            Echo(
                "Maximum feedrates (mm/s):",
            ),
            Echo(
                "M203 X300.00 Y300.00 Z40.00 E45.00",
            ),
            Echo(
                "Maximum Acceleration (mm/s2):",
            ),
            Echo(
                "M201 X9000 Y9000 Z100 E10000",
            ),
            Echo(
                "Acceleration: S=acceleration, T=retract acceleration",
            ),
            Echo(
                "M204 S3000.00 T3000.00",
            ),
            Echo(
                "Advanced variables: S=Min feedrate (mm/s), T=Min travel feedrate (mm/s), B=minimum segment time (ms), X=maximum XY jerk (mm/s),  Z=maximum Z jerk (mm/s),  E=maximum E jerk (mm/s)",
            ),
            Echo(
                "M205 S0.00 T0.00 B20000 X20.00 Z0.40 E5.00",
            ),
            Echo(
                "Home offset (mm):",
            ),
            Echo(
                "M206 X0.00 Y0.00 Z-11.45",
            ),
            Echo(
                "PID settings:",
            ),
            Echo(
                "M301 P10.03 I1.50 D70.00",
            ),
        ],
        "greeting_without_sd_card": [
            Greeting,
            Echo(
                "Marlin 1.0.0",
            ),
            Echo(
                "Last Updated: Nov 17 2017 23:41:38 | Author: Version DEV",
            ),
            Debug(
                "Compiled: Nov 17 2017",
            ),
            Echo(
                "Free Memory: 2052  PlannerBufferBytes: 1232",
            ),
            Echo(
                "Stored settings retrieved",
            ),
            Echo(
                "Steps per unit:",
            ),
            Echo(
                "M92 X80.00 Y80.00 Z200.00 E311.00",
            ),
            Echo(
                "Maximum feedrates (mm/s):",
            ),
            Echo(
                "M203 X300.00 Y300.00 Z40.00 E45.00",
            ),
            Echo(
                "Maximum Acceleration (mm/s2):",
            ),
            Echo(
                "M201 X9000 Y9000 Z100 E10000",
            ),
            Echo(
                "Acceleration: S=acceleration, T=retract acceleration",
            ),
            Echo(
                "M204 S3000.00 T3000.00",
            ),
            Echo(
                "Advanced variables: S=Min feedrate (mm/s), T=Min travel feedrate (mm/s), B=minimum segment time (ms), X=maximum XY jerk (mm/s),  Z=maximum Z jerk (mm/s),  E=maximum E jerk (mm/s)",
            ),
            Echo(
                "M205 S0.00 T0.00 B20000 X20.00 Z0.40 E5.00",
            ),
            Echo(
                "Home offset (mm):",
            ),
            Echo(
                "M206 X0.00 Y0.00 Z-11.45",
            ),
            Echo(
                "PID settings:",
            ),
            Echo(
                "M301 P10.03 I1.50 D70.00",
            ),
            Echo(
                "SD init fail",
            ),
        ],
    },
    "m21_init_sd_card": {
        "m21_no_sd_card": [
            Echo(
                "SD init fail",
            ),
            Ok(
                None,
            ),
        ],
    },
    "m23_select_sd_file": {
        "m23_no_sd_card": [
            Ok(
                None,
            ),
        ],
    },
    "m28_start_sd_write": {
        "m28_no_sd_card": [
            Ok(
                None,
            ),
        ],
    },
    "m30_delete_sd_file": {
        "m30_no_file": [
            Ok(
                None,
            ),
        ],
    },
    "movement_gcodes": {
        "g1": [
            Ok(
                None,
            ),
        ],
        "g28": [
            Ok(
                None,
            ),
        ],
        "g90": [
            Ok(
                None,
            ),
        ],
        "g91": [
            Ok(
                None,
            ),
        ],
    },
    "polling_mcodes": {
        "m105": [
            Ok(
                Some(
                    ActualTemperatures(
                        [
                            (
                                "e0",
                                38.2,
                            ),
                            (
                                "b",
                                26.6,
                            ),
                            (
                                "@",
                                0.0,
                            ),
                            (
                                "b@",
                                0.0,
                            ),
                        ],
                    ),
                ),
            ),
        ],
        "m114": [
            Feedback(
                ActualPositions(
                    [
                        (
                            "x",
                            0.0,
                        ),
                        (
                            "y",
                            0.0,
                        ),
                        (
                            "z",
                            0.0,
                        ),
                        (
                            "e0",
                            0.0,
                        ),
                    ],
                ),
            ),
        ],
        "m155_temperature_auto_report": [
            Ok(
                None,
            ),
        ],
    },
    "temperature_control": {
        "m109": [
            Feedback(
                ActualTemperatures(
                    [
                        (
                            "e0",
                            24.7,
                        ),
                        (
                            "e",
                            0.0,
                        ),
                    ],
                ),
            ),
            Feedback(
                ActualTemperatures(
                    [
                        (
                            "e0",
                            24.4,
                        ),
                        (
                            "e",
                            0.0,
                        ),
                    ],
                ),
            ),
        ],
    },
}
